# simple-cli-template

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
adder/: adder.py  config.py  main.py
anonymization/: config.py  main.py
liveness/: config.py  main.py
tests/: test_adder.py  test_main.py
