[metadata]
# replace with your username:
name = example-pkg-YOUR-USERNAME-HERE
version = 0.0.1
author = Example Author
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.9

install_requires =
    click>=7.1.2
    loguru>=0.5.3
    python-dotenv>=0.15.0
    pydantic>=1.7.3

[options.extras_require]
dev =
    pre-commit >= 2.10

[options.entry_points]
console_scripts =
    test_adder = adder.main:main
