[metadata]
# replace with your username:
name = simple-cli-template
version = 0.0.1
author = Alessio Montuoro
author_email = github.com@montuoro.info
description = A simple CLI application template
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AlessioM/simple-cli-template
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9

install_requires =
    click>=7.1.2
    loguru>=0.5.3
    python-dotenv>=0.15.0
    pydantic>=1.7.3

[options.extras_require]
dev =
    pre-commit >= 2.10
    pytest >= 6.2.2
    pytest-cov>=2.11.1
    pytest-mock>=3.5.1
    build>=0.3.0

[options.entry_points]
console_scripts =
    adder = adder.main:command_line
