[metadata]
# replace with your username:
name = anonymization
version = 0.0.2
author = Alessio Montuoro
author_email = alessio.montuoro@cloudflight.io
description = face detrection and liveness detection demo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AlessioM/simple-cli-template
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9

install_requires =
    click>=7.1.2
    loguru>=0.5.3
    python-dotenv>=0.15.0
    pydantic>=1.7.3
    mediapipe>=0.8
    opencv-python>=4.5
    pandas>=1.2.3

[options.extras_require]
dev =
    pre-commit >= 2.10
    pytest >= 6.2.2
    pytest-cov>=2.11.1
    pytest-mock>=3.5.1
    build>=0.3.0
    jedi-language-server>=0.29.0

[options.entry_points]
console_scripts =
    anonymization = anonymization.main:command_line
